@@ -10,7 +10,6 @@ bin/npg_deletable_dr_runs
 Build.PL
 cgi-bin/locate_runfolder
 cgi-bin/npg
-cgi-bin/storage
 Changes
 data/config.ini
 data/gfx/1G.png
@@ -106,7 +105,6 @@ data/templates/search_list_advanced.tt2
 data/templates/search_list_advanced_ajax.tt2
 data/templates/search_read.tt2
 data/templates/tag_form_ajax.tt2
-data/templates/usage_list.tt2
 data/templates/user2usergroup_create.tt2
 data/templates/user2usergroup_delete.tt2
 data/templates/user_list.tt2
@@ -200,7 +198,6 @@ lib/npg/model/tag.pm
 lib/npg/model/tag_frequency.pm
 lib/npg/model/tag_run.pm
 lib/npg/model/tag_run_lane.pm
-lib/npg/model/usage.pm
 lib/npg/model/user.pm
 lib/npg/model/user2usergroup.pm
 lib/npg/model/usergroup.pm
@@ -229,7 +226,6 @@ lib/npg/view/run_lane_annotation.pm
 lib/npg/view/run_status.pm
 lib/npg/view/run_status_dict.pm
 lib/npg/view/search.pm
-lib/npg/view/usage.pm
 lib/npg/view/user.pm
 lib/npg/view/user2usergroup.pm
 lib/npg/view/usergroup.pm
@@ -450,7 +446,6 @@ t/20-view-run_status.t
 t/20-view-run_status_dict.t
 t/20-view-search-advanced.t
 t/20-view-search.t
-t/20-view-usage.t
 t/20-view-user.t
 t/20-view-user2usergroup.t
 t/20-view-usergroup.t
