@@ -1,7 +1,7 @@
 [application]
 name=NPG
 namespace=npg
-views=instrument_status_annotation,manufacturer,instrument_format,instrument,instrument_status,instrument_mod,run,run_status,run_event_type,project,run_lane,run_annotation,run_status_dict,usage,user,user2usergroup,usergroup,search,administration,run_lane_annotation,instrument_annotation,instrument_utilisation
+views=instrument_status_annotation,manufacturer,instrument_format,instrument,instrument_status,instrument_mod,run,run_status,run_event_type,project,run_lane,run_annotation,run_status_dict,user,user2usergroup,usergroup,search,administration,run_lane_annotation,instrument_annotation,instrument_utilisation
 default_view=run
 
 [test]
