@@ -1,13 +1,0 @@
-<p style="clear:left">
-Sequencing Farm:
-<ul class="inline">
-[% prefix = view.staging_area_prefix -%]
-[% FOREACH si IN view.staging_area_indexes -%]
- <li><img src="/perl/storage/[%  prefix _ si %]" alt="[% prefix.upper %][% si %]" /></li>
-[% END -%]
-</ul>
-</p>
-<br style="clear:left"/>
-<br>
-<a href="http://scratchy.internal.sanger.ac.uk/wiki/index.php/Illumina_sequencing_instrument_to_staging_area_mapping">Illumina sequencing instrument to staging area mapping</a>
-
