@@ -4,6 +4,5 @@
 </div>
   <li><a class="npg_menu" href="/cgi-perl/npg/run/">Runs</a></li>
   <li><a class="npg_menu" href="/cgi-perl/npg/instrument/">Instruments</a></li>
-  <li><a class="npg_menu" href="/cgi-perl/npg/usage/">Disk Usage</a></li>
   <li><a class="npg_menu" href="/cgi-perl/npg/search/">Search</a></li>
 
